[gd_scene load_steps=5 format=2]

[ext_resource path="res://GraphNetwork/HustleGraphNode.gd" type="Script" id=1]
[ext_resource path="res://GraphNetwork/CommodityConverter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Product.tscn" type="PackedScene" id=4]
[ext_resource path="res://GraphNetwork/Sockets.tscn" type="PackedScene" id=5]

[node name="HustleGraphNode" type="GraphNode"]
margin_right = 32.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 150 )
mouse_filter = 1
title = "HustleNode"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 216.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StateLabel" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "State"

[node name="ResourcePic" type="TextureRect" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 82.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="ResourceLabel" type="Label" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 200.0
margin_bottom = 100.0
text = "Resource"
align = 1

[node name="Sockets" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 104.0
margin_right = 200.0
margin_bottom = 168.0

[node name="Output1" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 193.0
margin_right = 216.0
margin_bottom = 223.0
product = ExtResource( 4 )

[connection signal="dragged" from="." to="." method="_on_HustleGraphNode_dragged"]
[connection signal="offset_changed" from="." to="." method="_on_HustleGraphNode_offset_changed"]
[connection signal="resize_request" from="." to="." method="_on_HustleGraphNode_resize_request"]
